<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ActivityTheme">

    <TextView
        android:id="@+id/welcome"
        style="@style/MainTitle"
        android:text="@string/welcome" />

    <EditText
        android:id="@+id/username"
        style="@style/InputText"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_below="@+id/welcome" />

    <EditText
        style="@style/InputText"
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/username" />

    <CheckBox
        style="@style/Checkbox"
        android:id="@+id/rememberMe"
        android:text="@string/rememberMe"
        android:layout_below="@id/password" />

    <!-- TODO: style -->
    <Button
        style="@style/EditorButton"
        android:id="@+id/btnLogin"
        android:background="@color/textColor"
        android:text="@string/login"
        android:layout_below="@id/rememberMe" />

</RelativeLayout>
