<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/clienteNome"
        android:hint="@string/nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/clienteIdade"
        android:hint="@string/idade"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/clienteUrlFoto"
        android:hint="@string/urlFoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>